--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=youtube.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Infinite Scroll</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <i class="fa-solid fa-check"></i>
+    <!-- Title -->
+    <h1>Unsplash API - Infinite Scroll</h1>
+    <!-- Loader -->
+     <div class="loader" id="loader">
+        <img src="loader.svg" alt="Loading">
+     </div>
+     <!-- Image Container -->
+      <div class="image-container" id="image-container">
+      </div>
     <!-- Script -->
      <script src="script.js"></script>
 </body>
